planck (aside from lensing) works with my custom python3 clik, and added docs

--- a/cosmoslik_plugins/likelihoods/spt_lowl/spt_lowl.ipynb
+++ b/cosmoslik_plugins/likelihoods/spt_lowl/spt_lowl.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The South Pole Telescope \"low-$\\ell$\" Likelihood\n",
+    "# South Pole Telescope low-$\\ell$\n",
     "\n",
     "This plugin implements the South Pole Telescope likelihood from [Story et al. (2012)](http://arxiv.org/abs/1210.7231) and [Keisler et al. (2011)](http://arxiv.org/abs/1105.3182). The data comes included with this plugin and was downloaded from [here](http://pole.uchicago.edu/public/data/story12/) and [here](http://pole.uchicago.edu/public/data/keisler11/), respectively.\n",
     "\n",
@@ -22,13 +22,6 @@
    },
    "source": [
     "[API](../../../autodoc/cosmoslik_plugins.likelihoods.spt_lowl)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "See also the [API](../../../autodoc/cosmoslik_plugins.likelihoods.spt_lowl.html) documentation. "
    ]
   },
   {
